--- a/app/views/seats/index.html.erb
+++ b/app/views/seats/index.html.erb
@@ -58,14 +58,15 @@
   <tr>
     <td><%= seat.location %></td>
 	<td><%= seat.user_id %></td>
+	
     <td><%= link_to 'Edit', edit_seat_path(seat) %></td>
 	<td><%= link_to 'Show', seat_path(seat) %></td>
-
     <td></td>
   </tr>
 <% end %>
 </table>
-
+<br />
+<%= link_to 'New Seat', new_seat_path %>
 <br />
 
 
